# alive

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/alive/: __init__.py  __main__.py  cli.py  formatters.py  http_server.py  live_server.py  logging_config.json  protocols.py  request.py
src/alive/handlers/: __init__.py  alive-reload.js  base.py  script.py  sse.py  static.py
src/alive/responses/: __init__.py  base.py  file.py  sse.py
tests/: test_request_parsing.py
