[project]
name = "alive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Evgeny Goryachev", email = "saladware46@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "watchfiles>=1.2.0",
]

[project.scripts]
alive = "alive.cli:app"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ty>=0.0.58",
    "wemake-python-styleguide>=1.6.2",
]

[tool.ruff.lint]
external = ["WPS"]
