[project]
name = "alive-server"
version = "0.0.0"
license = "MIT"
description = "Async static HTTP development server with state-preserving live reloads"
readme = "README.md"
authors = [{ name = "Evgeny Goryachev", email = "saladware46@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["watchfiles>=1.2.0"]

[project.scripts]
alive = "alive.cli:app"


[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8-pyproject>=1.2.4",
    "mypy>=2.2.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "ty>=0.0.58",
    "wemake-python-styleguide>=1.6.2",
]

[tool.uv.build-backend]
module-name = "alive"
module-root = "src"

[tool.mypy]
packages = ["alive"]
strict = true
warn_unreachable = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D212"]
external = ["WPS"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.flake8]
select = ["WPS"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

addopts = """
    --strict-markers
    --cov=src
"""

testpaths = ["tests"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
build_command = """
uv lock --upgrade-package "$PACKAGE_NAME"
uv build
"""
[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]
[tool.semantic_release.branches.alpha]
match = "^(feat|fix|perf)/.+"
prerelease = true
prerelease_token = "alpha"
[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false
